--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="colorqq">#18ACFC</color>
     <color name="colorweixin">#4DBF4D</color>
     <color name="colorziti">#BBBBBB</color>
+    <color name="colorpl">#63d7f9</color>
     <color name="status">#03A9F4</color>
     <color name="lavender">#e6e6fa</color>
 </resources>
