--- a/app/src/main/res/layout/tuijian.xml
+++ b/app/src/main/res/layout/tuijian.xml
@@ -53,6 +53,7 @@
 
     <com.jcodecraeer.xrecyclerview.XRecyclerView
         android:cacheColorHint="#00000000"
+        android:visibility="gone"
         android:id="@+id/xlist_tuijian"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -60,6 +61,15 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/rela_remen">
     </com.jcodecraeer.xrecyclerview.XRecyclerView>
+    <utils.AnimationLoading
+        android:cacheColorHint="#00000000"
+        android:id="@+id/ani"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/rela_remen">
+    </utils.AnimationLoading>
     <com.jcodecraeer.xrecyclerview.XRecyclerView
         android:visibility="gone"
         android:cacheColorHint="#00000000"
