--- a/app/src/main/res/layout/tujian_item.xml
+++ b/app/src/main/res/layout/tujian_item.xml
@@ -115,6 +115,97 @@
     android:layout_height="1000px"
     android:layout_below="@+id/rl1"
     ></fm.jiecao.jcvideoplayer_lib.JCVideoPlayerStandard>
+
+
+    <RelativeLayout
+        android:layout_width="150px"
+        android:layout_height="900px"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/rl1"
+        android:layout_marginRight="20px"
+        android:layout_marginTop="20px"
+        android:id="@+id/relativeLayout">
+
+        <ImageView
+            android:id="@+id/imageView11"
+            android:layout_width="80px"
+            android:layout_height="80px"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="30px"
+            android:layout_marginTop="70px"
+            android:src="@drawable/heart" />
+
+        <TextView
+            android:id="@+id/tv11"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/imageView11"
+            android:layout_marginLeft="30px"
+            android:layout_marginTop="10px"
+            android:text="1563"
+            android:textColor="#fff" />
+
+        <ImageView
+
+            android:id="@+id/imageView111"
+            android:layout_width="80px"
+            android:layout_height="80px"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/tv11"
+            android:layout_marginRight="30px"
+            android:layout_marginTop="70px"
+            android:src="@drawable/xing" />
+
+        <TextView
+            android:id="@+id/tv_456"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/imageView111"
+            android:layout_marginLeft="30px"
+            android:layout_marginTop="10px"
+            android:text="1563"
+            android:textColor="#fff" />
+
+        <ImageView
+            android:id="@+id/imageView1111"
+            android:layout_width="80px"
+            android:layout_height="80px"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/tv_456"
+            android:layout_marginRight="30px"
+            android:layout_marginTop="70px"
+            android:src="@drawable/share" />
+
+        <TextView
+            android:id="@+id/tv123"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/imageView1111"
+            android:layout_marginLeft="30px"
+            android:layout_marginTop="10px"
+            android:text="1563"
+            android:textColor="#fff" />
+
+        <ImageView
+            android:id="@+id/img_pinglun"
+            android:layout_width="80px"
+            android:layout_height="80px"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/tv123"
+            android:layout_marginRight="30px"
+            android:layout_marginTop="70px"
+            android:src="@drawable/pinglun" />
+
+        <TextView
+            android:id="@+id/tv12"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/img_pinglun"
+            android:layout_marginLeft="30px"
+            android:layout_marginTop="10px"
+            android:text="1563"
+            android:textColor="#fff" />
+    </RelativeLayout>
     <View
         android:layout_marginTop="5px"
         android:layout_width="match_parent"
