--- a/app/src/main/res/layout/tujian_item.xml
+++ b/app/src/main/res/layout/tujian_item.xml
@@ -109,12 +109,12 @@
     </LinearLayout>
 
    </RelativeLayout>
-<fm.jiecao.jcvideoplayer_lib.JCVideoPlayerStandard
+<cn.jzvd.JZVideoPlayerStandard
     android:id="@+id/jiecao"
     android:layout_width="match_parent"
     android:layout_height="1000px"
     android:layout_below="@+id/rl1"
-    ></fm.jiecao.jcvideoplayer_lib.JCVideoPlayerStandard>
+    ></cn.jzvd.JZVideoPlayerStandard>
 
 
     <RelativeLayout
