--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,89 +10,13 @@
     android:background="#fff"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <include android:id="@+id/include"
-            layout="@layout/headerlayout"
-            ></include>
-        <FrameLayout
-            android:id="@+id/frame_main"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_above="@+id/linearlaout"
-            android:layout_below="@+id/include">
-        </FrameLayout>
-        <LinearLayout
-            android:id="@+id/linearlaout"
-            android:weightSum="3"
-            android:layout_alignParentBottom="true"
-            android:layout_width="match_parent"
-            android:layout_height="160px">
-            <LinearLayout
-                android:id="@+id/line_tuijian"
-                android:orientation="vertical"
-                android:gravity="center"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent">
-
-                <ImageView
-                    android:id="@+id/img_tuijian"
-                    android:layout_width="90px"
-                    android:layout_height="90px"
-                    android:src="@drawable/tuijian2" />
-                <TextView
-                    android:textColor="#03A9F4"
-                    android:id="@+id/tv_tuijian"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="推荐"
-                    />
-            </LinearLayout>
-            <LinearLayout
-                android:id="@+id/line_duanzi"
-                android:orientation="vertical"
-                android:gravity="center"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent">
-
-                <ImageView
-                    android:id="@+id/img_duanzi"
-                    android:layout_width="90px"
-                    android:layout_height="90px"
-                    android:src="@drawable/duanzi1" />
-                <TextView
-                    android:id="@+id/tv_duanzi"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="段子"
-                    />
-            </LinearLayout>
-            <LinearLayout
-                android:id="@+id/line_shiping"
-                android:orientation="vertical"
-                android:gravity="center"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent">
-                <ImageView
-                    android:id="@+id/img_shiping"
-                    android:layout_width="90px"
-                    android:layout_height="90px"
-                    android:src="@drawable/shiping1" />
-                <TextView
-                    android:id="@+id/tv_shiping"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="视频"
-                    />
-            </LinearLayout>
-        </LinearLayout>
+        <include layout="@layout/coor_layout"/>
     </RelativeLayout>
+
     <FrameLayout
         android:clickable="true"
         android:background="#ffffff"
@@ -99,9 +25,7 @@
         android:layout_height="match_parent"
         android:id="@+id/frame_left"
         ></FrameLayout>
-
-
-
 </android.support.v4.widget.DrawerLayout>
+
 
 
