--- a/app/src/main/res/layout/headerlayout.xml
+++ b/app/src/main/res/layout/headerlayout.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#03A9F4"
     android:layout_width="match_parent"
-    android:layout_height="140px">
+    android:layout_height="match_parent">
     <com.meg7.widget.CircleImageView
         android:layout_marginLeft="40px"
         android:layout_width="110px"
