--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -8,7 +8,7 @@
     tools:context="com.liu.asus.yikezhong.StartActivity">
     <ImageView
         android:src="@drawable/start"
-        android:scaleType="centerCrop"
+        android:scaleType="fitXY"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </RelativeLayout>
