--- a/app/src/main/res/layout/activity_iguanzhu.xml
+++ b/app/src/main/res/layout/activity_iguanzhu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
+    android:background="#fff"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -57,9 +58,9 @@
         android:background="#EBEBEB"
         ></View>
 
-<com.jcodecraeer.xrecyclerview.XRecyclerView
+<android.support.v7.widget.RecyclerView
     android:layout_below="@+id/iv_xia"
     android:id="@+id/xlv_gaunzhu"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"></com.jcodecraeer.xrecyclerview.XRecyclerView>
+    android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
 </RelativeLayout>
