--- a/app/src/main/res/layout/coor_layout.xml
+++ b/app/src/main/res/layout/coor_layout.xml
@@ -35,7 +35,7 @@
 
     <com.roughike.bottombar.BottomBar
         android:layout_gravity="bottom"
-        app:bb_inActiveTabColor="#cccccc"
+        app:bb_inActiveTabColor="#ff6633"
         app:bb_activeTabColor="@color/yancy_cyana400"
         android:id="@+id/bottomBar"
         android:layout_width="match_parent"
@@ -44,6 +44,5 @@
         app:bb_tabXmlResource="@xml/bottombar_tabs"
         app:bb_behavior="shy"
         app:bb_inActiveTabAlpha="0.6"
-
         />
 </android.support.design.widget.CoordinatorLayout>
